environments/dev/namespaces.yaml
apiVersion: v1 
kind: Namespace
metadata:
  name: gateway 
---
apiVersion: v1 
kind: Namespace
metadata: 
  name: expense 
---
apiVersion: v1 
kind: Namespace 
metadata: 
  name: chat
---
apiVersion: v1 
kind: Namespace 
metadata: 
  name: bank
---
apiVersion: v1 
kind: Namespace
metadata: 
  name: monitoring 
---
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
